TAG: mcvload-4-4-0-7
DATE: 08/17/2010
STAFF: sc
CHANGES:
1) mcvload.config.default - added missing ADD_COLUMNS_SH, so Install
    can correctly change it's permissions

TAG: mcvload-4-4-0-6
DATE: 07/29/2010
STAFF: sc
CHANGES:
1) mcvQC.py -  term note now has marker type AND Judy comments

TAG: mcvload-4-4-0-5
TAG: mcvload-4-4-0-4
DATE: 07/22/2010
STAFF: sc
CHANGES: 
1) mcvload.config, mcvQC.sh/py - added new grouping terms report
2) removed some debug statements

TAG: mcvload-4-4-0-3
DATE: 07/21/2010
STAFF: sc
CHANGES:
1) mcvload.sh - changed call to annotation loader to differentiate
   btwn mcv and other annotations
2) mcvQC.py - made invalid marker type and secondary marker
   type reports non-fatal

TAG: mcvload-4-4-0-2
DATE: 07/19/2010
STAFF: sc
CHANGES: run_mcv_vocload.sh - changed log dirctory
for new installation RUNTIME_DIR not yet created

TAG: mcvload-4-4-0-1
DATE: 07/14/2010
STAFF: sc
CHANGES: mcvQC.py - changed a column namE

TAG: mcvload-4-3-4-17
TAG: mcvload-4-3-4-16
DATE: 07/12/2010
STAFF: sc
CHANGES:
1) mcvload.config - added MKR_TYPE_CONFLICT_RPT
2) mcvload.sh - added MKR_TYPE_CONFLICT_RPT
3) mcvload.py - added creation of MKR_TYPE_CONFLICT_RPT

TAG: mcvload-4-3-4-15
TAG: mcvload-4-3-4-14
DATE: 07/05/2010
STAFF: sc
CHANGES:
1) clean up commenting and such 

TAG: mcvload-4-3-4-13
TAG: mcvload-4-3-4-12 - bad tag, bin dir only
DATE: 06/28/2010
STAFF: sc
CHANGES:
1) mcvload.config.default - INPUT_FILE_DEFAULT changed value
2) checkColumns.py - added sys.exit(1) if reporting missing columns
3) mcvload.sh - added running sanity and QC checks to this script
4) publishMcv - remove header line when copying to load input dir

TAG: mcvload-4-3-4-11
TAG: mcvload-4-3-4-10
DATE: 06/28/2010
STAFF: sc
CHANGES: Added runAddColumns 

TAG: mcvload-4-3-4-9
TAG: mcvload-4-3-4-8
DATE: 06/28/2010
STAFF: sc
CHANGES: TR6839 Marker Types
1) mcvload.config.default - added ADD_COLUMNS_EXT and ADD_COLUMNS_LOGFILE
   to support new cleansing script which adds columns