@@ -4,22 +4,36 @@
 
 <H3>Inputs</H3>
 <UL>
-<LI><A HREF="/data/loads/mcv/mcvload/input">MCV annotation load input file</A></LI>
+<LI><A HREF="/data/loads/mgi/mcvload/input/MCV_Vocab.obo">Vocab Load OBO File</A>
+<LI><A HREF="/data/loads/mgi/mcvload/input/mcvload.txt">Annotation Load File</A>
 </UL>
 
 <H3>Reports</H3>
+<A HREF="http://prodwww.informatics.jax.org/wiki/index.php/sw:Mcvload#Sanity_Reports.2FLogs">MCV Load Report Descriptions</A>
+<P>
 <UL>
-<LI><A HREF="/data/loads/mcv/mcvload/reports">MCV annotation load sanity and QC reports</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/reportsWithDiscrepancies.rpt">List of Reports with Discrepancies</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/sanity.rpt">Sanity Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_editor.rpt">Invalid Editor Login Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_evid.rpt">Invalid Evidence Code Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_jnum.rpt">Invalid JNumber Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_mcvid.rpt">Invalid MCV ID Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/invalid_marker.rpt">Invalid Marker Report</a>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/markertype_conflict.rpt">Marker Type Conflict Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/multiple_mcv.rpt">Annotations to Multiple MCV Terms Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/secondary_marker.rpt">Annotations to Secondary Marker Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/grouping_term.rpt">Annotations to Grouping Term Report</A>
+<LI><A HREF="/data/loads/mgi/mcvload/reports/before_after.rpt">Before/After Report</A>
 </UL>
 
 <H3>Diagnostic and Load BCP Files</H3>
 <UL>
-<LI><A HREF="/data/loads/mcvload/mcvload/output/">MCV annotation load output files</A>
+<LI><A HREF="/data/loads/mgi/mcvload/output/">MCV annotation load output files</A>
 </UL>
 
  <H3>Archives</H3>
  <UL>
- <LI><A HREF="/data/loads/mcv/mcvload/archive/">Logs, Reports and Output files from previous loads</A>
+ <LI><A HREF="/data/loads/mgi/mcvload/archive/">Logs, Reports and Output files from previous loads</A>
  </UL>
 
 </UL>
