@@ -1,3 +1,10 @@
+TAG: mcvload-4-4-0-8
+DATE: 08/20/2010
+STAFF: sc
+CHANGES:
+1) updated index.html with separate entries for each input and
+   each report
+
 TAG: mcvload-4-4-0-7
 DATE: 08/17/2010
 STAFF: sc
